<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <!-- Copyright (c) 2025 Jack Sidman Smith -->
  <!-- Licensed under the MIT License. See LICENSE file in the project root for full license information. -->
  <name>topic_fs</name>
  <version>0.0.0</version>
  <description>ROS 2 utility for mounting topic data as a FUSE filesystem</description>
  <maintainer email="smith.jack.sidman@gmail.com">Jack Sidman Smith</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- ROS 2 dependencies -->
  <depend>rclcpp</depend>
  <depend>rosbag2_cpp</depend>
  <depend>rosidl_runtime_cpp</depend>
  <depend>std_msgs</depend>
  
  <!-- System dependencies -->
  <build_depend>libfuse-dev</build_depend>
  <build_depend>nlohmann-json-dev</build_depend>

  <exec_depend>fuse</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>